# yesod-auth

./: .gitignore  LICENSE  README.md  docker-compose.yml  mkdocs.yml
admin/: Dockerfile  app.py  config.py  db.py  i18n.py  requirements.txt  valkey_client.py
api/: Dockerfile  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 001_initial.py  002_add_refresh_tokens.py  003_refactor_users_loose_coupling.py  004_add_provider_info_to_oauth_accounts.py  005_create_audit_schema.py  006_create_webhook_deliveries.py
api/app/: __init__.py  config.py  main.py  metrics.py  valkey.py
api/app/accounts/: router.py  schemas.py
api/app/audit/: __init__.py  service.py
api/app/auth/: __init__.py  jwt.py  mock_oauth.py  oauth.py  oidc.py  oidc_router.py  pkce.py  rate_limit.py  router.py  schemas.py  tokens.py
api/app/db/: __init__.py  base.py  session.py
api/app/models/: __init__.py  refresh_token.py  user.py
api/app/sessions/: router.py  schemas.py
api/app/users/: router.py  schemas.py
api/app/webhooks/: __init__.py  config.py  emitter.py  event.py  models.py  router.py  schemas.py  signer.py  worker.py
api/tests/: conftest.py  test_discord_oauth.py  test_facebook_oauth.py  test_github_oauth.py  test_health.py  test_linkedin_oauth.py  test_mock_oauth.py  test_oidc.py  test_slack_oauth.py  test_twitch_oauth.py  test_webhook_config.py  test_webhook_delivery.py  test_webhook_emitter.py  test_webhook_event.py  test_webhook_integration.py  test_webhook_signer.py  test_webhook_worker.py  test_x_oauth.py
config/: webhooks.yaml.example
(+68 files in other folders)
